source/supernova/static/supernova/style.css
/* ... */
#nav-toggle:checked + .main-menu {
    display: block;
}

#auth {
    text-align: right;
    font-size: 1.2em;
}

#auth-button {
    display: inline-block;
    padding: 5px 10px;
    border-radius: 5px;
}

#logout-button {
    display: inline-block;
    padding: 5px 10px;
    border-radius: 5px;
}

/* Middle content/navigation styles */
#middle {
    display: flex;
    align-items: flex-start;
    align-self: flex-start;
    flex-grow: 1;
    flex-wrap: nowrap;
}

#top-container, #bot-container {
    display: flex;
    list-style: none;
    margin: 0;
    padding: 0;
}

#top-container > a, #bot-container > a {
    display: inline-block;
    padding: 8px 20px;
    font-size: 1.2em;
    font-weight: bold;
    border-bottom: 0;
}

#top-container a:first-child {
    border-top-left-radius: 10px;
}

#top-container a:last-child {
    border-top-right-radius: 10px;
}

#content, #content-large {
    padding: 10px 20px;
    flex-grow: 1;
}

#content-wrapper {
    width: 100%;
}

.content-formatter {
    padding: 10px 20px;
}

.caption {
    list-style: none;
    display: flex;
    margin: 0;
    padding: 0;
}

.caption > li {
    display: inline-block;
    padding: 4px 15px;
}

#bot-container a:first-child, .caption > li:first-child {
    border-bottom-left-radius: 10px;
}

#bot-container a:last-child, .caption > li:last-child {
    border-bottom-right-radius: 10px;
}

#top-container.float-right, #bot-container.float-right {
    float: right;
    margin-right: 10px;
}

/* Content decorator styles */
#content-title-decorator {
    width: 100%;
    min-height: 200px;
    background-image: url("/static/college/decorator-placeholder.jpg");
    background-size: cover;
    background-position: center;
}

#content-title-decorator h1 {
    color: white;
    font-size: 3em;
    text-shadow: black 0 0 5px;
    padding: 20px;
}

#content-title-decorator h1 a {
    color: white;
}

#content-title-decorator h3 {
    font-size: 2em;
    text-shadow: black 0 0 3px;
    margin-left: 50px;
    color: white;
}

#content-title-decorator h3 a {
    color: white;
}

#content-title-decorator .svg-inline--fa {
    filter: drop-shadow(0 0 5px black);
}

/* Footer styles */
#footer > .width-limiter > ul {
    text-align: right;
    list-style-type: none;
    margin: 8px 0;
}

#footer > .width-limiter > ul > li {
    padding: 0 10px;
    font-weight: bold;
    display: inline;
}

#footer img {
    vertical-align: middle;
}

/* Generic overlay (used as an auth popup) */
#overlay {
    display: none;
    height: 100%;
    width: 100%;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: rgba(0, 0, 0, 0.6);
    overflow-y: scroll;
    transition: 0.5s;
}

#overlay-prompt > form input {
    margin-bottom: 5px;
}

#overlay-prompt > form input[type=text], #overlay-prompt input[type=password] {
    height: 40px;
}

#overlay-prompt input[type=submit] {
    margin-left: 20%;
    margin-top: 10px;
    width: 60%;
    height: 40px;
}

#overlay-close-button {
    display: inline-block;
    width: 40px;
    height: 40px;
    border-radius: 10px;
    float: right;
    text-align: center;
    line-height: 40px;
    font-weight: bolder;
}

/* Auxiliary styles */
.clearfix::after {
    content: "";
    clear: both;
    display: table;
}

#status {
    display: inline-block;
    width: 12px;
    height: 12px;
    border-radius: 6px;
}

.status-low {
    background-color: greenyellow;
    display: inline-block;
    border: 1px solid green;
}

.status-medium {
    background-color: orange;
    display: inline-block;
    border: 1px solid orangered;
}

.status-high {
    background-color: red;
    display: inline-block;
    border: 1px solid #ac0000;
}

.captcha {
    padding: 0 !important;
    margin: 0;
    vertical-align: middle;
}

.generic-button {
    display: inline-block;
    border-radius: 5px;
    padding: 5px 10px;
    font-weight: bold;
}

.flex-wrapper {
    display: flex;
    flex-wrap: wrap;
    align-items: baseline;
}

.flex-grid-item {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background-size: cover;
    background-position: center;
    border-radius: 5px;
    margin: 10px;
    width: 220px;
    height: 150px;
    vertical-align: center;
    text-align: center;
    font-weight: bold;
    font-size: 1.2em;
}

.hidden {
    display: none;
}

.shown {
    display: block;
}

.flex-grid-item-bottom {
    width: 100%;
}

.flex-box {
    border-radius: 5px;
    padding: 10px 20px;
    margin: 10px;
}

.flex-line-break {
    display: inline-block;
    flex-basis: 100% !important;
}

/* Screen size custom styles*/
/* Big screens */
@media only screen and (min-width: 1201px) {
    #navigation > .main-menu > li > a {
        line-height: 75px;
    }

    #header {
        height: 75px;
    }

    #logo img {
        width: 250px;
    }

    #breadcrumbs a:first-child {
        padding-left: 0;
    }

    #middle {
        margin-top: 20px;
        margin-bottom: 20px;
    }

    .width-limiter {
        width: 84%;
        max-width: 1500px;
        margin: auto;
    }

    #auth {
        padding: 20px 0;
    }
}

/* Medium screens */
@media only screen and (min-width: 981px) and (max-width: 1200px) {
    #navigation > .main-menu > li > a {
        line-height: 50px;
    }

    #logo img {
        height: 40px;
    }

    #header {
        height: 50px;
    }

    #auth {
        padding: 5px 0;
        font-size: 1.2em;
    }

    #breadcrumbs a:first-child {
        padding-left: 20px;
    }

    #middle {
        padding: 0 10px;
        width: calc(100% - 20px);
        margin-top: 10px;
        margin-bottom: 10px;
    }

    .width-limiter {
        width: 96%;
        padding: 0 2%;
    }
}
/* ... */

